Your commit message

--- a/src/home/header/home.css
+++ b/src/home/header/home.css
@@ -3,7 +3,7 @@
         width: 40px;
        }
        .header-dropment-main-page {
-        background-image: url('./images/Dropment\ \(1\).png');
+        background-image: url('./images/Untitled\ design\ \(25\)\ \(1\).png');
         background-size: cover;
         background-position: center;
         height: 70vh;
@@ -442,7 +442,7 @@
         width: 40px;
        }
        .header-dropment-main-page {
-        background-image: url('./images/Dropment\ \(1\).png');
+        background-image: url('./images/Untitled\ design\ \(25\)\ \(1\).png');
         background-size: cover;
         background-position: center;
         height: 70vh;
@@ -883,7 +883,7 @@
         width: 40px;
        }
        .header-dropment-main-page {
-        background-image: url('./images/Dropment\ \(1\).png');
+        background-image: url('./images/Untitled\ design\ \(25\)\ \(1\).png');
         background-size: cover;
         background-position: center;
         height: 90vh;
@@ -1322,7 +1322,7 @@
     width: 70px;
    }
    .header-dropment-main-page {
-    background-image: url('./images/Dropment\ \(1\).png');
+    background-image: url('./images/Untitled\ design\ \(25\)\ \(1\).png');
     background-size: cover;
     background-position: center;
     height: 100vh;
