--- a/src/home/myprofile/myprofile.css
+++ b/src/home/myprofile/myprofile.css
@@ -46,6 +46,7 @@
 
 .profile-details {
   margin-left: 20px;
+  text-align: center;
 }
 
 .profile-details h2 {
@@ -56,7 +57,7 @@
 .profile-details p {
   margin: 5px 0;
   font-size: 16px;
-
+  color: black;
   width: 350px;
 
 }
