--- a/src/home/template5/template5.css
+++ b/src/home/template5/template5.css
@@ -800,7 +800,7 @@
     margin-top: 150px;
   }
   
-  .footer-1-temp5 h4, p {
+  .footer-1-temp5 h4{
     color: rgb(0, 0, 0);
   }
   .footer-1-temp5 p {
